# spark-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: benchmark_sentiment.py  local_example.py
src/spark_ai/: __init__.py  ai.py  config.py  exceptions.py  logging_config.py
src/spark_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/spark_ai/backends/: base_backend.py  huggingface_backend.py
src/spark_ai/udf/: __init__.py  classify_udf.py  embed_udf.py  sentiment_udf.py  summarize_udf.py
tests/: conftest.py
tests/unit/: test_ai_classify_api.py  test_ai_embed_api.py  test_ai_summarize_api.py  test_huggingface_backend.py  test_sentiment.py  test_udf_serialization.py
