[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-ai"
version = "0.1.0"
description = "Distributed AI inference framework for PySpark"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Akash Singh", email = "akash22675@gmail.com"}]
dependencies = [
    "pyspark>=3.5.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pydantic>=2.7.0",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff", "mypy", "pandas-stubs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
